style.css
* {
  margin: 0;
  padding: 0;
  font: #03040b;
}

body {
  background-color: #0c1531;
}

h1 {
  color: white;
  font-size: 3.9em;
  margin: 0.4em 0;
}

h2 {
  color: #d3d3d3;
  font-weight: 100;
  font-size: 1em;
  width: 65%;
  line-height: 1.5em;
}

.footer {
  margin: 1.6em 0;
}

.block--wrapper {
  padding: 2em 5em;
  height: 91vh;
}

.block--nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.block--inline {
  margin: 1em 0;
}

.block--inline:nth-child(2) > a {
  padding: 1em;
  text-decoration: none;
  font-size: 1.1em;
}

.block {
  display: grid;
  grid-template-columns: 55%;
  grid-template-rows: 1fr 2fr 1fr 1fr;

  height: 90%;
}

.block--text {
  grid-row: 2;
  width: 75%;
}

.block--component {
  grid-row: 3;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;

  padding: 1em;
  margin: 4em 0;

  background-color: white;
  border-radius: 6px;
  border: 2px solid black;
}

.input--inline {
  display: flex;
  flex-direction: column;
  width: 30%;
}

.input--inline > * {
  margin: 0.2em;
}

/*? Components */

.devicon-codepen-plain {
  color: #f0edee;
  font-size: 40px;
}

.devicon-codepen-plain:hover {
  color: #a1eb94;
  cursor: pointer;
}

.brand--button {
  font-size: 1.1em;

  background: #aff8a2;
  border-radius: 4px;
  border: none;
  padding: 1em 1.9em;
}

.brand--button:hover {
  background-color: #b1b1b1;
}

label {
  font-size: 0.9em;
}

input[type="text"] {
  width: 100%;
  padding: 8px 1px;
  background-color: #f5f5f7;
  border: gray;
}

a {
  color: #b1b1b1;
}

a:hover {
  color: #aff8a2;
}

/*! Media Queries */

@media (max-width: 1397px) {
  .block--component {
    display: grid;
    grid-template-columns: 100%;
  }
  .input--inline {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 95%;
  }
}

@media (max-width: 767.98px) {
  .block--wrapper {
    padding: 2em 2em;
    height: 91vh;
  }
  h1 {
    font-size: 3.4em;
    margin: 0.4em 0;
  }

  h2 {
    color: #f0edee;
    font-weight: 100;
    font-size: 6em;
    width: 65%;
    line-height: 1.5em;
  }

  .block {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 1fr 2fr 1fr 1fr;
  }
  .block--text {
    grid-row: 2;
    width: 100%;
  }
  .block--component {
    display: grid;
    grid-template-columns: 100%;
  }
  .input--inline {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
  }

  input[type="text"] {
    width: 100%;
    padding: 12px 1px;
    background-color: #f5f5f7;
    border: gray;
  }
}

